# eliza-agent-app

./: CLAUDE.md  Cargo.toml  Makefile  README.md  REFERENCE_NOTES.md  TODO.md
src/: audio.rs  config.rs  eliza.rs  grok.rs  main.rs  vrchat.rs
